<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_item"
        android:paddingStart="4dp"
        android:paddingTop="12dp"
        android:paddingEnd="4dp"
        android:paddingBottom="12dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/missionTitle"
            style="@style/TitleItemLaunch"
            android:layout_marginStart="4dp"
            android:text="@string/launches_item_mission"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateTitle"
            style="@style/TitleItemLaunch"
            android:text="@string/launches_item_date_time"
            app:layout_constraintStart_toStartOf="@id/missionTitle"
            app:layout_constraintTop_toBottomOf="@id/missionTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rocketTitle"
            style="@style/TitleItemLaunch"
            android:text="@string/launches_item_rocket"
            app:layout_constraintStart_toStartOf="@id/missionTitle"
            app:layout_constraintTop_toBottomOf="@id/dateTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/daysTitle"
            style="@style/TitleItemLaunch"
            android:text="@string/company_data_from"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/missionTitle"
            app:layout_constraintTop_toBottomOf="@id/rocketTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/missionDescription"
            style="@style/DescribeItemLaunch"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@id/missionTitle"
            app:layout_constraintEnd_toStartOf="@+id/statusMissionSuccess"
            app:layout_constraintStart_toEndOf="@id/daysTitle"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Mission name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateDescription"
            style="@style/DescribeItemLaunch"
            app:layout_constraintBottom_toBottomOf="@id/dateTitle"
            app:layout_constraintEnd_toStartOf="@+id/statusMissionSuccess"
            app:layout_constraintStart_toStartOf="@id/missionDescription"
            app:layout_constraintTop_toBottomOf="@id/missionDescription"
            tools:text="2022" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rocketDescription"
            style="@style/DescribeItemLaunch"
            app:layout_constraintBottom_toBottomOf="@id/rocketTitle"
            app:layout_constraintEnd_toStartOf="@+id/statusMissionSuccess"
            app:layout_constraintStart_toStartOf="@id/missionDescription"
            app:layout_constraintTop_toBottomOf="@id/dateDescription"
            tools:text="Rocket" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/daysDescription"
            style="@style/DescribeItemLaunch"
            app:layout_constraintBottom_toBottomOf="@id/daysTitle"
            app:layout_constraintEnd_toStartOf="@+id/statusMissionSuccess"
            app:layout_constraintStart_toStartOf="@id/missionDescription"
            app:layout_constraintTop_toBottomOf="@id/rocketDescription"
            tools:text="10" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/statusMissionSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/launch_success"
            android:src="@drawable/ic_success"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/statusMissionFailed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/launch_fail"
            android:src="@drawable/ic_fail"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
